# quantum-mpi

./: .gitignore  .gitmodules  CMakeLists.txt  DOCS.md  LICENSE  README.md  configure.sh  launch_cunqa_program.sh  run.sh
lib/: CMakeLists.txt
lib/cunqa_api/: CMakeLists.txt
lib/cunqa_api/include/: cunqa_api.hpp
lib/cunqa_api/src/: cunqa_api.cpp  cunqa_client_logger.cpp
lib/quantum_circuit/: CMakeLists.txt
lib/quantum_circuit/include/: quantum_circuit.hpp
lib/quantum_circuit/src/: quantum_circuit.cpp
lib/quantum_circuit/tests/: test_quantum_circuit_json.cpp
lib/quantum_mpi/: CMakeLists.txt
lib/quantum_mpi/include/: quantum_mpi.hpp
lib/quantum_mpi/src/: quantum_mpi.cpp  quantum_mpi_comm.cpp
lib/quantum_mpi/tests/: test_quantum_mpi.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.hpp
lib/utils/src/: utils.cpp
modules/cunqa_runtime/: CMakeLists.txt
modules/cunqa_runtime/include/: cunqa_runtime.hpp
modules/cunqa_runtime/src/: cunqa_runtime.cpp  dummy_logger.cpp
run/: qraise_415587  qraise_415588
src/: distributed_qft.cpp  main.cpp  simple_telegate.cpp
